# komi-learn

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
benchmarks/: DESIGN-coding-memory-eval.md  __init__.py
benchmarks/locomo/: .gitignore  README.md  __init__.py  conditions.py  dataset.py  harness.py  llm.py  run.py
benchmarks/locomo/tests/: test_harness.py
docs/: 00-hermes-source-notes.md  01-research.md  02-architecture.md  03-roadmap.md  04-ai-engineering-review.md  05-adr-log.md
examples/: demo_codex_host.py  demo_loop.py
hooks/: hooks.json
komi/: __init__.py  cli.py  updater.py  wizard.py
komi/adapters/: __init__.py  config_io.py  config_schema.py  hooklib.py
komi/adapters/claude_code/: __init__.py  config.py  curate.py  doctor.py  hook_capture.py  hook_compact.py  hook_distill.py  hook_recall.py  llm.py  llm_cli.py  paths.py  requirements.py  setup.py
komi/adapters/codex/: __init__.py  config.py  hook_distill.py  hook_recall.py  llm.py  paths.py  setup.py
komi/engine/: __init__.py  classify.py  curator.py  distill.py  embed.py  model.py  recall.py  store.py
komi/engine/prompts/: distill.md
komi/pool/: __init__.py  contribute.py  corroboration.py  github_backend.py  identity.py  queue.py  repo_format.py  verify_cli.py
pool-repo-template/: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md
pool-repo-template/.github/scripts/: verify.py
pool-repo-template/.github/workflows/: verify.yml
pool-repo-template/learnings/debugging/: blake3_e679d2f3ce74d5735519bb4e9b2d3bdd32bfa65d61f23aeae27f3f012ef26ff9.md
pool-repo-template/learnings/tooling/: blake3_48f97281cbcb0559f1c6e5ad88116c8b9e5acb81403fde79031a6d899d2c3719.md
tests/: test_ai_eng_fixes.py  test_classify.py  test_cli_show.py  test_codex_adapter.py  test_compact_reinjection.py  test_compaction_fixes.py  test_corroboration.py  test_curator.py  test_distill.py  test_e2e.py  test_installer.py  test_model.py  test_pool.py  test_pool_github.py  test_review_fixes.py  test_secarch_fixes.py  test_semantic_clustering.py  test_semantic_recall.py  test_store.py  test_update.py  test_visibility.py
