[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "komi-learn"
version = "0.1.0"
description = "A continuous, zero-friction learning layer for AI agents — learns about you and improves its own skills across every session, with an anonymized, provenance-verified global knowledge pool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kurikomi-labs" }]
keywords = ["ai", "agents", "continuous-learning", "memory", "claude-code", "skills"]

# The engine runs with ZERO required dependencies (stdlib only): blake2b stands in
# for blake3, and the pool runs in unsigned mode. Install the extras for the full
# experience.
dependencies = []

[project.optional-dependencies]
# Full cryptographic trust for the global pool + faster hashing.
crypto = ["blake3>=0.4", "pynacl>=1.5"]
# Real LLM-backed distillation/classification in the Claude Code adapter.
llm = ["anthropic>=0.40"]
# Everything.
full = ["blake3>=0.4", "pynacl>=1.5", "anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
komi-recall = "komi.adapters.claude_code.hook_recall:main"

[tool.setuptools.packages.find]
include = ["komi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
