[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "komi-learn"
version = "0.3.0"
description = "A continuous, zero-friction learning layer for AI agents — learns about you and improves its own skills across every session, with an anonymized, provenance-verified global knowledge pool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kurikomi Labs", email = "rainxch.dev@gmail.com" }]
keywords = ["ai", "agents", "continuous-learning", "memory", "claude-code", "codex", "skills", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# The engine runs with ZERO required dependencies (stdlib only): blake2b stands in
# for blake3, and the pool runs in unsigned mode. Install the extras for the full
# experience.
dependencies = []

[project.urls]
Homepage = "https://github.com/kurikomi-labs/komi-learn"
Repository = "https://github.com/kurikomi-labs/komi-learn"
Issues = "https://github.com/kurikomi-labs/komi-learn/issues"
"Global Learnings Pool" = "https://github.com/kurikomi-labs/komi-pool"

[project.optional-dependencies]
# Full cryptographic trust for the global pool + faster hashing.
crypto = ["blake3>=0.4", "pynacl>=1.5"]
# Real LLM-backed distillation/classification in the Claude Code adapter.
llm = ["anthropic>=0.40"]
# Semantic (meaning-based) recall via a local embedding model. ~100-500MB download
# on first install; fully offline after, no API key. Without it, recall falls back
# to keyword search automatically — nothing breaks.
smart = ["sentence-transformers>=2.2"]
# Everything.
full = ["blake3>=0.4", "pynacl>=1.5", "anthropic>=0.40", "sentence-transformers>=2.2"]
dev = ["pytest>=8"]

[project.scripts]
komi-learn = "komi.cli:main"

[tool.setuptools.packages.find]
include = ["komi*"]

# The distiller prompt is loaded at runtime (komi/engine/distill.py reads
# prompts/distill.md), so it MUST be packaged into the wheel — otherwise a
# pip-installed copy can't distill. Ship every .md under the package.
[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
